--- a/includes/timesheetHTML.html
+++ b/includes/timesheetHTML.html
@@ -1,7 +1,7 @@
 
 <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
-  <div class="input-group-prepend">
-     <span class="input-group-text" id="basic-addon1">Monday, January 1</span>
+  <div class="input-group-prepend w-50">
+     <span class="input-group-text" id="dayOfMonth">'+dayOfMonth+'</span>
   </div>
   <div class="btn-group btn-group-sm mr-2" role="group" aria-label="First group">
     <button type="button" class="btn btn-secondary" data-selected="false" value="10">10</button>
