--- a/includes/timesheetHTML.html
+++ b/includes/timesheetHTML.html
@@ -1,14 +1,18 @@
 
-<div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
-  <div class="input-group-prepend w-50">
-     <span class="input-group-text" id="dayOfMonth">'+dayOfMonth+'</span>
-  </div>
-  <div class="btn-group btn-group-sm mr-2" role="group" aria-label="First group">
-    <button type="button" class="btn btn-secondary" data-selected="false" value="10">10</button>
-    <button type="button" class="btn btn-secondary" data-selected="false" value="8">8</button>
-    <button type="button" class="btn btn-secondary" data-selected="false" value="">Other</button>
-  </div>
-    <div class="input-group w-25">
-      <input type="text" name="hoursDay'+x+'" class="form-control text-center value" placeholder="Enter Hours" value="0" aria-label="Input group example" aria-describedby="btnGroupAddon"></input>
-    </div>
-</div>
+
+      <div class="form-row">
+          <form class="form-inline">
+<!--               <input type="text" class="form-control text-center" placeholder="Wed, Sep 31"></input> -->
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Wed, Sep 31</span>
+                </div>
+               <div class="btn-group">
+              <button type="button" class="btn btn-secondary" data-selected="false" value="10">10</button>
+              <button type="button" class="btn btn-secondary" data-selected="false" value="8">8</button>
+<!--               <button type="button" class="btn btn-secondary" data-selected="false" value="">-></button> -->
+            </div>
+              <input type="number" name="hoursDay'+x+'" class="form-control text-center value" min="0" max="99" placeholder="0" value="0" aria-label="Input group example" aria-describedby="btnGroupAddon"></input>
+            </div>
+          </form>
+      </div>
