--- a/includes/testHTML.html
+++ b/includes/testHTML.html
@@ -21,9 +21,12 @@
 
 
 
+<div class="row">
+  <div class+"col">
 
-  <div class="form-row">
-      <form class="form-inline">
+
+
+      <!-- <form class="form-inline">
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text">'+formDate+'</span>
@@ -34,9 +37,26 @@
         </div>
           <input type="number" name="hoursDay'+x+'" class="form-control text-center value" min="0" max="99" placeholder="0" value="0" aria-label="Input group example" aria-describedby="btnGroupAddon"></input>
         </div>
-      </form>
-  </div>
+      </form> -->
 
+      <form class="form1">
+<!--               <input type="text" class="form-control text-center" placeholder="Wed, Sep 31"></input> -->
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span>Wed, Sep 31</span>
+            </div>
+           <div class="btn-group">
+          <button type="button" class="btn btn-secondary" data-selected="false" value="10">10</button>
+          <button type="button" class="btn btn-secondary" data-selected="false" value="8">8</button>
+<!--               <button type="button" class="btn btn-secondary" data-selected="false" value="">-></button> -->
+        </div>
+          <input type="number" name="hoursDay'+x+'" class="value" min="0" max="99" placeholder="0" value="0" aria-label="Input group example" aria-describedby="btnGroupAddon"></input>
+
+        </div>
+      </form>
+
+    </div>
+  </div>
 
 
 
