--- a/includes/css/myStyle.css
+++ b/includes/css/myStyle.css
@@ -3,18 +3,20 @@
   text-align: center;
 }
 
-.form1{
-  display: inline;
-}
+
 
 .leftCol{
   /* background-color: grey; */
 }
 
+.topCol{
+  background-color: AntiqueWhite ;
+  margin-left: 15px;
+  margin-right: 15px;
+}
 
 .input-group>.input-group-prepend {
     min-width: 130px;
-    /* max-width: 100px; */
 }
 .input-group .input-group-text {
     width: 100%;
@@ -25,7 +27,7 @@
 }
 
 .farRightCol{
-  background-color: navy;
+  background-color: AntiqueWhite;
 }
 
 
