--- a/includes/testHTML.html
+++ b/includes/testHTML.html
@@ -24,24 +24,23 @@
 <div class="row">
   <div class+"col">
 
-
-
- <form class="form-inline">
-   <div class="input-group">
-     <div class="input-group-prepend">
-       <span class="input-group-text">'+formDate+'</span>
-     </div>
-     <div class="btn-group">
-       <button type="button" class="btn btn-secondary" data-selected="false" value="10">10</button>
-       <button type="button" class="btn btn-secondary" data-selected="false" value="8">8</button>
-     </div>
-     <input type="number" name="hoursDay'+x+'" class="form-control text-center value" min="0" max="99" placeholder="0" value="0" aria-label="Input group example" aria-describedby="btnGroupAddon"></input>
-   </div>
- </form>
-
+    <form class="form-inline justify-content-center">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">'+formDate+'</span>
+        </div>
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary" data-selected="false" value="10">10</button>
+          <button type="button" class="btn btn-secondary" data-selected="false" value="8">8</button>
+        </div>
+        <input type="number" name="hoursDay'+x+'" id="hoursDay'+x+'" class="form-control text-center totHoursBox" min="0" max="99" placeholder="0" value=0 aria-label="Input group example" aria-describedby="btnGroupAddon"></input>
+      </div>
+    </form>
 
     </div>
   </div>
+
+
 
 
 
